<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CountdownFragment">

    <TextView
        android:id="@+id/countdown_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countdown"
        android:textSize="80sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/set_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/set"
        android:layout_marginBottom="80dp"
        android:layout_above="@+id/countdown_text"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/button_start_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/countdown_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/pause" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_start_pause"
        android:layout_marginStart="11dp"
        android:layout_centerHorizontal="true"
        android:text="@string/reset" />

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/floatingActionButton"-->
<!--        android:layout_below="@+id/countdown_text"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:clickable="true"-->
<!--        app:srcCompat="@drawable/ic_pause" />-->


</RelativeLayout>
</layout>